# LargeFileReading

./: .gitignore  CMakeLists.txt  README.md  Taskfile.yml  data_gen.py  main.cc  test.py
.github/workflows/: bench.yml
